--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 <h3>Upnishads : उपनिषद् </h3>
 <a href="https://www.mediafire.com/file/cus2j1o9j2xtkm3/Katha_Upanishad__-_Gita_Press_Gorakhpur.pdf/file">Katha Upanishad  - Gita Press Gorakhpur</a>
 <br>
-<a href="https://www.mediafire.com">Kena Upanishad - Gita Press Gorakhpur</a>
+<a href="https://www.mediafire.com">&#8603; Kena Upanishad - Gita Press Gorakhpur</a>
 <br>
-<a href="https://www.mediafire.com">MundakaUpanishad - Adi Shankaracharya Bhashya</a>
+<a href="https://www.mediafire.com">&#8702; MundakaUpanishad - Adi Shankaracharya Bhashya</a>
 <br>
-<a href="https://www.mediafire.com">Vidur-Neeti (Complete) - by Gita Press</a>
+<a href="https://www.mediafire.com">&#8627; Vidur-Neeti (Complete) - by Gita Press</a>
 <br>
-<a href="https://www.mediafire.com">Katha Upnishad</a>
+<a href="https://www.mediafire.com">&#8611; Katha Upnishad</a>
 <br>
-<a href="https://www.mediafire.com">Katha Upnishad</a>
+<a href="https://www.mediafire.com">&#8602; Katha Upnishad</a>
 <br>
 <a href="https://www.mediafire.com">Katha Upnishad</a>
 <br>
