--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <h2>IndianSages</h2>
 <p>Links to all docs</p>
 <h3>Upnishads : उपनिषद् </h3>
-<a href="https://www.mediafire.com/file/cus2j1o9j2xtkm3/Katha_Upanishad__-_Gita_Press_Gorakhpur.pdf/file">Katha Upanishad  - Gita Press Gorakhpur</a>
+<a href="https://www.mediafire.com/file/cus2j1o9j2xtkm3/Katha_Upanishad__-_Gita_Press_Gorakhpur.pdf/file">↛ Katha Upanishad  - Gita Press Gorakhpur</a>
 <br>
-<a href="https://www.mediafire.com">↛ Kena Upanishad - Gita Press Gorakhpur</a>
+<a href="https://www.mediafire.com/file/an9dor5qzry1lu6/Kena_Upanishad_-_Gita_Press_Gorakhpur.pdf/file">↛ Kena Upanishad - Gita Press Gorakhpur</a>
 <br>
-<a href="https://www.mediafire.com">↛ MundakaUpanishad - Adi Shankaracharya Bhashya</a>
+<a href="https://www.mediafire.com/file/an9dor5qzry1lu6/Kena_Upanishad_-_Gita_Press_Gorakhpur.pdf/file">↛ MundakaUpanishad - Adi Shankaracharya Bhashya</a>
 <br>
 <a href="https://www.mediafire.com">↛ Vidur-Neeti (Complete) - by Gita Press</a>
 <br>
@@ -33,9 +33,12 @@
 <a href="https://www.mediafire.com">Katha Upnishad</a>
 <br>
 <h3>Itihaasa : इतिहास</h3>
-<a href="https://www.mediafire.com">↛ Valmiki-Ramayan-Part-I by Gita Press</a>
+<a href="https://www.mediafire.com/file/5x92fjrvjf3vbi0/Valmiki-Ramayan-Part-I_by_Gita_Press.pdf/file">↛ Valmiki-Ramayan-Part-I by Gita Press</a>
 <br>
-<a href="https://www.mediafire.com">↛ Valmiki-Ramayan-Part-II by Gita Press</a>
+<a href="https://www.mediafire.com/file/mf9oooggyqw49dc/Valmiki-Ramayan-Part-II_by_Gita_Press.pdf/file">↛ Valmiki-Ramayan-Part-II by Gita Press</a>
 <br>
+<a href="https://www.mediafire.com/file/e8iiudtmlrsnf9v/Vidur-Neeti_%2528Complete%2529_by_Gita_Press.pdf/file">↛ Valmiki-Ramayan-Part-II by Gita Press</a>
+<br>
+
 </body>
 </html>
