--- a/index.html
+++ b/index.html
@@ -24,13 +24,9 @@
 <br>
 <a href="https://www.mediafire.com/file/41xs3ct392al4cl/Prasna_Upanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1935.pdf/file">↛ Prasna-Upanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1935</a>
 <br>
-<a href="">↛ Taittiriyopanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1936</a>
+<a href="https://www.mediafire.com/file/huj0aq67r8pelhj/Taittiriyopanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1936.pdf/file">↛ Taittiriyopanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1936</a>
 <br>
 <a href="https://www.mediafire.com/file/6hxjz3oqrvd4hlz/Isavasyopanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1940.pdf/file">↛ Isavasyopanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1940</a>
-<br>
-<a href="">Katha-Upnishad</a>
-<br>
-<a href="">Katha-Upnishad</a>
 <br>
 <h3>Itihaasa : इतिहास</h3>
 <a href="https://www.mediafire.com/file/5x92fjrvjf3vbi0/Valmiki-Ramayan-Part-I_by_Gita_Press.pdf/file">↛ Valmiki-Ramayan-Part-I by Gita Press</a>
@@ -42,7 +38,12 @@
 <br>
 <h3>Sutras : सूत्र </h3>
 <a href="https://www.mediafire.com/file/dy11vux26vxb07y/Brahmasutra_Sankarabhashya_Ratnaprabha_with_Hindi_Translation_Part_1B_-_Chandi_Prasad_Sukla_1934_%2528Achyutagranthamala%2529.pdf/file">Brahmasutra-Sankarabhashya-Ratnaprabha with Hindi Translation Part 1B</a>
+<br>
 <a href="https://www.mediafire.com/file/p8ngvgy9zjwibay/Brahmasutra_Sankarabhashya_Ratnaprabha_with_Hindi_Translation_Part_2-_Chandi_Prasad_Sukla_1934_%2528Achyutagranthamala%2529.pdf/file">Brahmasutra-Sankarabhashya-Ratnaprabha with Hindi Translation Part 2</a>
+<h3>Extras</h3>
+<a href="https://www.mediafire.com/file/5dha3exncrik1x6/Viveka_Chudamani_with_Hindi_Translation_-_Munilal_Gupta_%2528Gita_Press%2529.pdf/file">Viveka-Chudamani-with-Hindi-Translation-Gita-Press</a>
+<br>
+<a href="https://www.mediafire.com/file/wl3nmm5c86l314x/VishnuSahasranamaSankarabhashyaWithHindiTranslation1934gitaPress.pdf/file">Vishnu-Sahasranama-Sankara-bhashya-With-Hindi-Translation-Gita-Press</a>
 <br>
 
 </body>
