--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <body>
     <h2>IndianSages</h2>
 <p>Links to all docs</p>
+<a href="https://www.mediafire.com/file/36oxw8bwpqvjkvh/Bhagwad_Gita_-_Gita_Press_Gorakhpur.pdf/file">Shrimad Bhagwad Gita - Gita Press Gorakhpur</a>
+<br>
+<a href="">Bhagwad Gita Adi Shankaracharya Bhasya - Gita Press Gorakhpur</a>
+<br>
 <h3>Upnishads : उपनिषद् </h3>
 <a href="https://www.mediafire.com/file/cus2j1o9j2xtkm3/Katha_Upanishad__-_Gita_Press_Gorakhpur.pdf/file">↛ Katha-Upanishad-Gita-Press-Gorakhpur</a>
 <br>
@@ -28,6 +32,8 @@
 <br>
 <a href="https://www.mediafire.com/file/6hxjz3oqrvd4hlz/Isavasyopanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1940.pdf/file">↛ Isavasyopanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1940</a>
 <br>
+<a href="https://www.mediafire.com/file/6pe36msl1e40avt/Chhandogya-upanishad_-_Gita_Press_Gorakhpur.pdf/file">Chhandogya-upanishad - Gita Press Gorakhpur</a>
+<br>
 <h3>Itihaasa : इतिहास</h3>
 <a href="https://www.mediafire.com/file/5x92fjrvjf3vbi0/Valmiki-Ramayan-Part-I_by_Gita_Press.pdf/file">↛ Valmiki-Ramayan-Part-I by Gita Press</a>
 <br>
@@ -37,6 +43,8 @@
 <a href="https://www.mediafire.com/file/e8iiudtmlrsnf9v/Vidur-Neeti_%2528Complete%2529_by_Gita_Press.pdf/file">↛ Vidur-Neeti (Complete) - by Gita Press</a>
 <br>
 <h3>Sutras : सूत्र </h3>
+<a href="https://www.mediafire.com/file/t8x78nh5auijl2s/Patanjali_Yog_Sutra_%2528Hindi%2529.pdf/file">Patanjali Yog Sutra (Hindi)</a>
+<br>
 <a href="https://www.mediafire.com/file/dy11vux26vxb07y/Brahmasutra_Sankarabhashya_Ratnaprabha_with_Hindi_Translation_Part_1B_-_Chandi_Prasad_Sukla_1934_%2528Achyutagranthamala%2529.pdf/file">Brahmasutra-Sankarabhashya-Ratnaprabha with Hindi Translation Part 1B</a>
 <br>
 <a href="https://www.mediafire.com/file/p8ngvgy9zjwibay/Brahmasutra_Sankarabhashya_Ratnaprabha_with_Hindi_Translation_Part_2-_Chandi_Prasad_Sukla_1934_%2528Achyutagranthamala%2529.pdf/file">Brahmasutra-Sankarabhashya-Ratnaprabha with Hindi Translation Part 2</a>
