--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IndianSages</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="om.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
@@ -13,10 +14,10 @@
 <body>
     <h2> <span id="orange">Ind</span>ian<span id="green">Sages</span> </h2>
     <p id="heading">|| धर्मो रक्षति रक्षितः ||</p>
-<p>Links to all docs</p>
+<h3> Gita : श्रीमद्भगवद्गीता</h3>
 <a href="https://www.mediafire.com/file/36oxw8bwpqvjkvh/Bhagwad_Gita_-_Gita_Press_Gorakhpur.pdf/file">↛Shrimad Bhagwad Gita - Gita Press Gorakhpur</a>
 <br>
-<a href="">Bhagwad Gita Adi Shankaracharya Bhasya - Gita Press Gorakhpur</a>
+<a href="https://www.mediafire.com/file/u7esqis35dcuadt/Bhagavad_Gita_Sankara_Bhashya_with_Hindi_Translation_-_Harikrishnadas_Goyandaka_1953_%2528Gita_Press%2529.pdf/file">↛Shrimad Bhagwad Gita Adi Shankaracharya Bhasya - Gita Press Gorakhpur</a>
 <br>
 <h3>Upnishads : उपनिषद् </h3>
 <a href="https://www.mediafire.com/file/cus2j1o9j2xtkm3/Katha_Upanishad__-_Gita_Press_Gorakhpur.pdf/file">↛Katha-Upanishad-Gita-Press-Gorakhpur</a>
@@ -32,6 +33,8 @@
 <a href="https://www.mediafire.com/file/huj0aq67r8pelhj/Taittiriyopanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1936.pdf/file">↛Taittiriyopanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1936</a>
 <br>
 <a href="https://www.mediafire.com/file/6hxjz3oqrvd4hlz/Isavasyopanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1940.pdf/file">↛Isavasyopanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1940</a>
+<br>
+<a href="https://www.mediafire.com/file/k95lmf7rp61leqp/Brihadaranyakopanishad_Sankara_Bhashya_with_Hindi_Translation_GIta_Press_1955.pdf/file">↛Brihadaranyakopanishad Sankara Bhashya - by Gita Press </a>
 <br>
 <a href="https://www.mediafire.com/file/6pe36msl1e40avt/Chhandogya-upanishad_-_Gita_Press_Gorakhpur.pdf/file">↛Chhandogya-upanishad - Gita Press Gorakhpur</a>
 <br>
