--- a/index.html
+++ b/index.html
@@ -57,6 +57,46 @@
 <br>
 <a href="https://www.mediafire.com/file/wl3nmm5c86l314x/VishnuSahasranamaSankarabhashyaWithHindiTranslation1934gitaPress.pdf/file">↛Vishnu-Sahasranama-Sankara-bhashya-With-Hindi-Translation-Gita-Press</a>
 <br>
-
+<a href="https://www.mediafire.com/file/o8twcp5yrttbzbl/Rama_Charit_Manas_-_Gita_Press_Gorakhpur.pdf/file">Rama Charit Manas - Gita Press Gorakhpur</a>
+<br>
+<h3>Chalisa : चालीसा </h3>
+<a href="https://www.mediafire.com/file/xsdntm6ynt88u4x/Baglamukhi-Chalisa.pdf/file">Baglamukhi-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/xsdntm6ynt88u4x/Baglamukhi-Chalisa.pdf/file">Baglamukhi-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/tvnnlx5hfuamlaz/Durga-Chalisa.pdf/file">Durga-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/b9h4qizdscuwz3p/Gayatri-Chalisa.pdf/file">Gayatri-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/dfqc393wpgg8q7g/Hanuman-Chalisa-hindi.pdf/file">Hanuman-Chalisa-hindi</a>
+<br>
+<a href="https://www.mediafire.com/file/l28vuft599p8xvf/Krishna-Chalisa.pdf/file">Krishna-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/9sltcfmfys7qyqk/Mahakali-Chalisa.pdf/file">Mahakali-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/3c41sm6migpwnnb/Navgraha-Chalisa.pdf/file">Navgraha-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/x26c7zev364fjop/Radha-Rani-Chalisa.pdf/file">Radha-Rani-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/238pjep7121nmtv/Santoshi-Maa-Chalisa.pdf/file">Santoshi-Maa-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/3wrrp0r2m4quold/Saraswati-Chalisa.pdf/file">Saraswati-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/gvx3xtk50h15ma0/Shani-Dev-Chalisa.pdf/file">Shani-Dev-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/ty05ulsveddd460/Shiv-Chalisa.pdf/file">Shiv-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/ccrndh3yw4mbdwe/Shri-Banke-Bihari-Chalisa.pdf/file">Shri-Banke-Bihari-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/uapsqrdx0wqdogu/shri-ganesh-chalisa-in-hindi-754.pdf/file">Shri-Ganesh-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/6zslp29to2ut2zr/Shri-Laxmi-Chalisa.pdf/file">Shri-Laxmi-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/i3h4qdsqskfpyno/Sri-Ram-Chalisa-pooja-vidhi-hindi.pdf/file">Shri-Ram-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/bu8800bt7g10mjf/Surya-Dev-Chalisa.pdf/file">Surya-Dev-Chalisa</a>
+<br>
+<a href="https://www.mediafire.com/file/bu8800bt7g10mjf/Surya-Dev-Chalisa.pdf/file">Vishnu-Chalisa</a>
+<br>
 </body>
 </html>
