--- a/index.html
+++ b/index.html
@@ -15,88 +15,88 @@
     <h2> <span id="orange">Ind</span>ian<span id="green">Sages</span> </h2>
     <p id="heading">|| धर्मो रक्षति रक्षितः ||</p>
 <h3> Gita : श्रीमद्भगवद्गीता</h3>
-<a href="https://www.mediafire.com/file/36oxw8bwpqvjkvh/Bhagwad_Gita_-_Gita_Press_Gorakhpur.pdf/file">↛Shrimad Bhagwad Gita - Gita Press Gorakhpur</a>
+<a href="https://www.mediafire.com/file/36oxw8bwpqvjkvh/Bhagwad_Gita_-_Gita_Press_Gorakhpur.pdf/file">↛ Shrimad Bhagwad Gita - Gita Press Gorakhpur</a>
 <br>
-<a href="https://www.mediafire.com/file/u7esqis35dcuadt/Bhagavad_Gita_Sankara_Bhashya_with_Hindi_Translation_-_Harikrishnadas_Goyandaka_1953_%2528Gita_Press%2529.pdf/file">↛Shrimad Bhagwad Gita Adi Shankaracharya Bhasya - Gita Press Gorakhpur</a>
+<a href="https://www.mediafire.com/file/u7esqis35dcuadt/Bhagavad_Gita_Sankara_Bhashya_with_Hindi_Translation_-_Harikrishnadas_Goyandaka_1953_%2528Gita_Press%2529.pdf/file">↛ Shrimad Bhagwad Gita Adi Shankaracharya Bhasya - Gita Press Gorakhpur</a>
 <br>
 <h3>Upnishads : उपनिषद् </h3>
-<a href="https://www.mediafire.com/file/cus2j1o9j2xtkm3/Katha_Upanishad__-_Gita_Press_Gorakhpur.pdf/file">↛Katha-Upanishad-Gita-Press-Gorakhpur</a>
+<a href="https://www.mediafire.com/file/cus2j1o9j2xtkm3/Katha_Upanishad__-_Gita_Press_Gorakhpur.pdf/file">↛ Katha-Upanishad-Gita-Press-Gorakhpur</a>
 <br>
-<a href="https://www.mediafire.com/file/an9dor5qzry1lu6/Kena_Upanishad_-_Gita_Press_Gorakhpur.pdf/file">↛Kena-Upanishad-Gita-Press-Gorakhpur</a>
+<a href="https://www.mediafire.com/file/an9dor5qzry1lu6/Kena_Upanishad_-_Gita_Press_Gorakhpur.pdf/file">↛ Kena-Upanishad-Gita-Press-Gorakhpur</a>
 <br>
-<a href="https://www.mediafire.com/file/an9dor5qzry1lu6/Kena_Upanishad_-_Gita_Press_Gorakhpur.pdf/file">↛MundakaUpanishad-Adi-Shankaracharya-Bhashya</a>
+<a href="https://www.mediafire.com/file/an9dor5qzry1lu6/Kena_Upanishad_-_Gita_Press_Gorakhpur.pdf/file">↛ MundakaUpanishad-Adi-Shankaracharya-Bhashya</a>
 <br>
-<a href="https://www.mediafire.com/file/v8r6a5esve82w2d/Aitareya_Upanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1938.pdf/file">↛Aitareya-Upanishad-Sankara-Bhashya with Hindi Translation-Gita -Press 1938</a>
+<a href="https://www.mediafire.com/file/v8r6a5esve82w2d/Aitareya_Upanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1938.pdf/file">↛ Aitareya-Upanishad-Sankara-Bhashya with Hindi Translation-Gita -Press 1938</a>
 <br>
-<a href="https://www.mediafire.com/file/41xs3ct392al4cl/Prasna_Upanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1935.pdf/file">↛Prasna-Upanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1935</a>
+<a href="https://www.mediafire.com/file/41xs3ct392al4cl/Prasna_Upanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1935.pdf/file">↛ Prasna-Upanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1935</a>
 <br>
-<a href="https://www.mediafire.com/file/huj0aq67r8pelhj/Taittiriyopanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1936.pdf/file">↛Taittiriyopanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1936</a>
+<a href="https://www.mediafire.com/file/huj0aq67r8pelhj/Taittiriyopanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1936.pdf/file">↛ Taittiriyopanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1936</a>
 <br>
-<a href="https://www.mediafire.com/file/6hxjz3oqrvd4hlz/Isavasyopanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1940.pdf/file">↛Isavasyopanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1940</a>
+<a href="https://www.mediafire.com/file/6hxjz3oqrvd4hlz/Isavasyopanishad_Sankara_Bhashya_with_Hindi_Translation_-_Gita_Press_1940.pdf/file">↛ Isavasyopanishad-Sankara-Bhashya with Hindi Translation-Gita Press 1940</a>
 <br>
-<a href="https://www.mediafire.com/file/k95lmf7rp61leqp/Brihadaranyakopanishad_Sankara_Bhashya_with_Hindi_Translation_GIta_Press_1955.pdf/file">↛Brihadaranyakopanishad Sankara Bhashya - by Gita Press </a>
+<a href="https://www.mediafire.com/file/k95lmf7rp61leqp/Brihadaranyakopanishad_Sankara_Bhashya_with_Hindi_Translation_GIta_Press_1955.pdf/file">↛ Brihadaranyakopanishad Sankara Bhashya - by Gita Press </a>
 <br>
-<a href="https://www.mediafire.com/file/6pe36msl1e40avt/Chhandogya-upanishad_-_Gita_Press_Gorakhpur.pdf/file">↛Chhandogya-upanishad - Gita Press Gorakhpur</a>
+<a href="https://www.mediafire.com/file/6pe36msl1e40avt/Chhandogya-upanishad_-_Gita_Press_Gorakhpur.pdf/file">↛ Chhandogya-upanishad - Gita Press Gorakhpur</a>
 <br>
 <h3>Itihaasa : इतिहास</h3>
-<a href="https://www.mediafire.com/file/5x92fjrvjf3vbi0/Valmiki-Ramayan-Part-I_by_Gita_Press.pdf/file">↛Valmiki-Ramayan-Part-I by Gita Press</a>
+<a href="https://www.mediafire.com/file/5x92fjrvjf3vbi0/Valmiki-Ramayan-Part-I_by_Gita_Press.pdf/file">↛ Valmiki-Ramayan-Part-I by Gita Press</a>
 <br>
-<a href="https://www.mediafire.com/file/mf9oooggyqw49dc/Valmiki-Ramayan-Part-II_by_Gita_Press.pdf/file">↛Valmiki-Ramayan-Part-II by Gita Press</a>
+<a href="https://www.mediafire.com/file/mf9oooggyqw49dc/Valmiki-Ramayan-Part-II_by_Gita_Press.pdf/file">↛ Valmiki-Ramayan-Part-II by Gita Press</a>
 
 <h3>Neeti : नीति </h3>
-<a href="https://www.mediafire.com/file/e8iiudtmlrsnf9v/Vidur-Neeti_%2528Complete%2529_by_Gita_Press.pdf/file">↛Vidur-Neeti (Complete) - by Gita Press</a>
+<a href="https://www.mediafire.com/file/e8iiudtmlrsnf9v/Vidur-Neeti_%2528Complete%2529_by_Gita_Press.pdf/file">↛ Vidur-Neeti (Complete) - by Gita Press</a>
 <br>
 <h3>Sutras : सूत्र </h3>
-<a href="https://www.mediafire.com/file/t8x78nh5auijl2s/Patanjali_Yog_Sutra_%2528Hindi%2529.pdf/file">↛Patanjali Yog Sutra (Hindi)</a>
+<a href="https://www.mediafire.com/file/t8x78nh5auijl2s/Patanjali_Yog_Sutra_%2528Hindi%2529.pdf/file">↛ Patanjali Yog Sutra (Hindi)</a>
 <br>
-<a href="https://www.mediafire.com/file/dy11vux26vxb07y/Brahmasutra_Sankarabhashya_Ratnaprabha_with_Hindi_Translation_Part_1B_-_Chandi_Prasad_Sukla_1934_%2528Achyutagranthamala%2529.pdf/file">↛Brahmasutra-Sankarabhashya-Ratnaprabha with Hindi Translation Part 1B</a>
+<a href="https://www.mediafire.com/file/dy11vux26vxb07y/Brahmasutra_Sankarabhashya_Ratnaprabha_with_Hindi_Translation_Part_1B_-_Chandi_Prasad_Sukla_1934_%2528Achyutagranthamala%2529.pdf/file">↛ Brahmasutra-Sankarabhashya-Ratnaprabha with Hindi Translation Part 1B</a>
 <br>
-<a href="https://www.mediafire.com/file/p8ngvgy9zjwibay/Brahmasutra_Sankarabhashya_Ratnaprabha_with_Hindi_Translation_Part_2-_Chandi_Prasad_Sukla_1934_%2528Achyutagranthamala%2529.pdf/file">↛Brahmasutra-Sankarabhashya-Ratnaprabha with Hindi Translation Part 2</a>
+<a href="https://www.mediafire.com/file/p8ngvgy9zjwibay/Brahmasutra_Sankarabhashya_Ratnaprabha_with_Hindi_Translation_Part_2-_Chandi_Prasad_Sukla_1934_%2528Achyutagranthamala%2529.pdf/file">↛ Brahmasutra-Sankarabhashya-Ratnaprabha with Hindi Translation Part 2</a>
 <h3>Extras</h3>
-<a href="https://www.mediafire.com/file/5dha3exncrik1x6/Viveka_Chudamani_with_Hindi_Translation_-_Munilal_Gupta_%2528Gita_Press%2529.pdf/file">↛Viveka-Chudamani-with-Hindi-Translation-Gita-Press</a>
+<a href="https://www.mediafire.com/file/5dha3exncrik1x6/Viveka_Chudamani_with_Hindi_Translation_-_Munilal_Gupta_%2528Gita_Press%2529.pdf/file">↛ Viveka-Chudamani-with-Hindi-Translation-Gita-Press</a>
 <br>
-<a href="https://www.mediafire.com/file/wl3nmm5c86l314x/VishnuSahasranamaSankarabhashyaWithHindiTranslation1934gitaPress.pdf/file">↛Vishnu-Sahasranama-Sankara-bhashya-With-Hindi-Translation-Gita-Press</a>
+<a href="https://www.mediafire.com/file/wl3nmm5c86l314x/VishnuSahasranamaSankarabhashyaWithHindiTranslation1934gitaPress.pdf/file">↛ Vishnu-Sahasranama-Sankara-bhashya-With-Hindi-Translation-Gita-Press</a>
 <br>
 <a href="https://www.mediafire.com/file/o8twcp5yrttbzbl/Rama_Charit_Manas_-_Gita_Press_Gorakhpur.pdf/file">Rama Charit Manas - Gita Press Gorakhpur</a>
 <br>
 <h3>Chalisa : चालीसा </h3>
-<a href="https://www.mediafire.com/file/xsdntm6ynt88u4x/Baglamukhi-Chalisa.pdf/file">Baglamukhi-Chalisa</a>
+<a href="https://www.mediafire.com/file/xsdntm6ynt88u4x/Baglamukhi-Chalisa.pdf/file">↛  Baglamukhi-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/xsdntm6ynt88u4x/Baglamukhi-Chalisa.pdf/file">Baglamukhi-Chalisa</a>
+<a href="https://www.mediafire.com/file/xsdntm6ynt88u4x/Baglamukhi-Chalisa.pdf/file">↛  Baglamukhi-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/tvnnlx5hfuamlaz/Durga-Chalisa.pdf/file">Durga-Chalisa</a>
+<a href="https://www.mediafire.com/file/tvnnlx5hfuamlaz/Durga-Chalisa.pdf/file">↛  Durga-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/b9h4qizdscuwz3p/Gayatri-Chalisa.pdf/file">Gayatri-Chalisa</a>
+<a href="https://www.mediafire.com/file/b9h4qizdscuwz3p/Gayatri-Chalisa.pdf/file">↛  Gayatri-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/dfqc393wpgg8q7g/Hanuman-Chalisa-hindi.pdf/file">Hanuman-Chalisa-hindi</a>
+<a href="https://www.mediafire.com/file/dfqc393wpgg8q7g/Hanuman-Chalisa-hindi.pdf/file">↛  Hanuman-Chalisa-hindi</a>
 <br>
-<a href="https://www.mediafire.com/file/l28vuft599p8xvf/Krishna-Chalisa.pdf/file">Krishna-Chalisa</a>
+<a href="https://www.mediafire.com/file/l28vuft599p8xvf/Krishna-Chalisa.pdf/file">↛  Krishna-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/9sltcfmfys7qyqk/Mahakali-Chalisa.pdf/file">Mahakali-Chalisa</a>
+<a href="https://www.mediafire.com/file/9sltcfmfys7qyqk/Mahakali-Chalisa.pdf/file">↛  Mahakali-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/3c41sm6migpwnnb/Navgraha-Chalisa.pdf/file">Navgraha-Chalisa</a>
+<a href="https://www.mediafire.com/file/3c41sm6migpwnnb/Navgraha-Chalisa.pdf/file">↛  Navgraha-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/x26c7zev364fjop/Radha-Rani-Chalisa.pdf/file">Radha-Rani-Chalisa</a>
+<a href="https://www.mediafire.com/file/x26c7zev364fjop/Radha-Rani-Chalisa.pdf/file">↛  Radha-Rani-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/238pjep7121nmtv/Santoshi-Maa-Chalisa.pdf/file">Santoshi-Maa-Chalisa</a>
+<a href="https://www.mediafire.com/file/238pjep7121nmtv/Santoshi-Maa-Chalisa.pdf/file">↛  Santoshi-Maa-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/3wrrp0r2m4quold/Saraswati-Chalisa.pdf/file">Saraswati-Chalisa</a>
+<a href="https://www.mediafire.com/file/3wrrp0r2m4quold/Saraswati-Chalisa.pdf/file">↛  Saraswati-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/gvx3xtk50h15ma0/Shani-Dev-Chalisa.pdf/file">Shani-Dev-Chalisa</a>
+<a href="https://www.mediafire.com/file/gvx3xtk50h15ma0/Shani-Dev-Chalisa.pdf/file">↛  Shani-Dev-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/ty05ulsveddd460/Shiv-Chalisa.pdf/file">Shiv-Chalisa</a>
+<a href="https://www.mediafire.com/file/ty05ulsveddd460/Shiv-Chalisa.pdf/file">↛  Shiv-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/ccrndh3yw4mbdwe/Shri-Banke-Bihari-Chalisa.pdf/file">Shri-Banke-Bihari-Chalisa</a>
+<a href="https://www.mediafire.com/file/ccrndh3yw4mbdwe/Shri-Banke-Bihari-Chalisa.pdf/file">↛  Shri-Banke-Bihari-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/uapsqrdx0wqdogu/shri-ganesh-chalisa-in-hindi-754.pdf/file">Shri-Ganesh-Chalisa</a>
+<a href="https://www.mediafire.com/file/uapsqrdx0wqdogu/shri-ganesh-chalisa-in-hindi-754.pdf/file">↛  Shri-Ganesh-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/6zslp29to2ut2zr/Shri-Laxmi-Chalisa.pdf/file">Shri-Laxmi-Chalisa</a>
+<a href="https://www.mediafire.com/file/6zslp29to2ut2zr/Shri-Laxmi-Chalisa.pdf/file">↛  Shri-Laxmi-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/i3h4qdsqskfpyno/Sri-Ram-Chalisa-pooja-vidhi-hindi.pdf/file">Shri-Ram-Chalisa</a>
+<a href="https://www.mediafire.com/file/i3h4qdsqskfpyno/Sri-Ram-Chalisa-pooja-vidhi-hindi.pdf/file">↛  Shri-Ram-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/bu8800bt7g10mjf/Surya-Dev-Chalisa.pdf/file">Surya-Dev-Chalisa</a>
+<a href="https://www.mediafire.com/file/bu8800bt7g10mjf/Surya-Dev-Chalisa.pdf/file">↛  Surya-Dev-Chalisa</a>
 <br>
-<a href="https://www.mediafire.com/file/bu8800bt7g10mjf/Surya-Dev-Chalisa.pdf/file">Vishnu-Chalisa</a>
+<a href="https://www.mediafire.com/file/bu8800bt7g10mjf/Surya-Dev-Chalisa.pdf/file">↛  Vishnu-Chalisa</a>
 <br>
 </body>
 </html>
